examples/bad/type12.swifty
//return in procedure
func foo() {
   return 5
}

foo()
